@@ -32,17 +32,6 @@
 #include <boost/iostreams/device/array.hpp>
 
 
-// This is for compatibility with Orthanc SDK <= 1.3.0
-#if !defined(ORTHANC_PLUGINS_VERSION_IS_ABOVE)
-#define ORTHANC_PLUGINS_VERSION_IS_ABOVE(major, minor, revision) \
-  (ORTHANC_PLUGINS_MINIMAL_MAJOR_NUMBER > major ||               \
-   (ORTHANC_PLUGINS_MINIMAL_MAJOR_NUMBER == major &&             \
-    (ORTHANC_PLUGINS_MINIMAL_MINOR_NUMBER > minor ||             \
-     (ORTHANC_PLUGINS_MINIMAL_MINOR_NUMBER == minor &&           \
-      ORTHANC_PLUGINS_MINIMAL_REVISION_NUMBER >= revision))))
-#endif
-
-
 namespace OrthancPlugins
 {
   struct GdcmImageDecoder::PImpl
@@ -214,7 +203,7 @@ namespace OrthancPlugins
 #if ORTHANC_PLUGINS_VERSION_IS_ABOVE(1, 3, 1)
           return OrthancPluginPixelFormat_RGB48;
 #else
-          throw std::runtime_error("RGB48 pixel format is only supported by Orthanc >= 1.3.1");
+          throw std::runtime_error("RGB48 pixel format is only supported if compiled against Orthanc SDK >= 1.3.1");
 #endif
           
         default:
@@ -257,6 +246,11 @@ namespace OrthancPlugins
 
       case OrthancPluginPixelFormat_RGB24:
         return 3;
+
+#if ORTHANC_PLUGINS_VERSION_IS_ABOVE(1, 3, 1)
+      case OrthancPluginPixelFormat_RGB48:
+        return 6;
+#endif
 
       default:
         throw std::runtime_error("Unsupport pixel format");
