@@ -1,6 +1,7 @@
 Pending changes in the mainline
 ===============================
 
+* Support of rendering RGB48 lookup tables (palette), if Orthanc SDK >= 1.3.1
 * Support of OpenBSD
 
 
